# Repositorio_pesquisas

./: .gitignore  README.md  index.html
analises_vitimizacao/: ANALISES.md  README.md  main.py  pyproject.toml
analises_vitimizacao/dados_tratados/PNAD_2009/: agressao.xlsx  furto.xlsx  roubo.xlsx  roubofurto.xlsx  seguranca.xlsx  tentativa.xlsx
analises_vitimizacao/dados_tratados/csv/: Dados_Consolidados_Tratados.csv  belo_horrizonte_2002.csv  escolas_alunos_2006.csv  escolas_professores_2006.csv
analises_vitimizacao/dados_tratados/excel/: belo_horrizonte_2002.xlsx  escolas_alunos_2006.xlsx  escolas_professores_2006.xlsx  percepcao_medoMG.xlsx
analises_vitimizacao/documentos/belo_horrizonte_2002/: Questionário vers¦o 43.doc
analises_vitimizacao/documentos/percepção_medo_MG_2008/: Folder.doc  Quest Medo Março 05.doc  Questionario Medo 2 e Cultura 01042008_3.doc  Questionario Medo e Cultura 01042008_3.doc  Questionario Medo e Cultura 07 04 2008 revisado.doc  Sugestao de Quetoes 01.doc  Sugestão de Questões 05.doc  Sugestão de Questões 06.doc  Sugestão de Questões 07.doc  Sugestão de Questões 08.doc  Sugestão de Questões 09.doc  Sugestão de Quetões 02.doc  Sugestão de Quetões 03.doc  Sugestão de Quetões 04.doc  modelo comparativo.doc  modelo para inserir codigo de barras.doc
analises_vitimizacao/documentos/violencia_escolas_2006/: Questionario aluno_FINAL_2006.doc
analises_vitimizacao/scripts/: PNAD_2009.py  analise_vitimizacao_generico.ipynb  analise_vitimizacao_generico.py
analises_vitimizacao/scripts/analises/: PNAD_2009.ipynb  PNAD_2009.py  datafolha.ipynb  (+9 more)
(+2103 files in other folders)
