[project]
name = "analises_vitimizacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "xlrd",
    "openpyxl",
    "os",
    "fpdf",
    "xlsxwriter",
    "squarify"
]
